--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/03/2020 04:59:00 PM</p>
+    <p class="lastupdate">09/03/2020 05:04:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">99.0&#176;F</td>
+        <td class="data">98.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">99.0&#176;F</td>
+        <td class="data">98.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">99.0&#176;F</td>
+        <td class="data">98.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">55.8&#176;F</td>
+        <td class="data">56.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">24%</td>
+        <td class="data">25%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.840 inHg (-0.072)</td>
+        <td class="data">29.844 inHg (-0.069)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">6 mph S (180&#176;)</td>
+        <td class="data">2 mph ESE (112&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">96.7&#176;F</td>
+        <td class="data">96.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -448,7 +448,7 @@
         </td>
         <td class="data new_row hilo_month">
           0<br/>
-          161
+          162
         </td>
         <td class="data new_row hilo_year">
           2<br/>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">100%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">2 days, 2 hours, 12 minutes</td>
+      <td class="data">2 days, 2 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">2 days, 2 hours, 12 minutes</td>
+      <td class="data">2 days, 2 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
