--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/03/2020 05:19:00 PM</p>
+    <p class="lastupdate">09/03/2020 05:24:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">98.2&#176;F</td>
+        <td class="data">97.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">98.2&#176;F</td>
+        <td class="data">97.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">98.2&#176;F</td>
+        <td class="data">97.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">55.2&#176;F</td>
+        <td class="data">54.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.842 inHg (-0.065)</td>
+        <td class="data">29.843 inHg (-0.062)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">7 mph NW (315&#176;)</td>
+        <td class="data">5 mph NNW (338&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">95.5&#176;F</td>
+        <td class="data">96.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">32%</td>
+        <td class="data">31%</td>
       </tr>
     </tbody>
   </table>
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           2<br/>
-          4
+          3
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">2 days, 2 hours, 32 minutes</td>
+      <td class="data">2 days, 2 hours, 37 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">2 days, 2 hours, 32 minutes</td>
+      <td class="data">2 days, 2 hours, 37 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
