--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/03/2020 05:29:00 PM</p>
+    <p class="lastupdate">09/03/2020 05:34:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">96.1&#176;F</td>
+        <td class="data">95.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">96.1&#176;F</td>
+        <td class="data">95.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">96.1&#176;F</td>
+        <td class="data">95.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">54.5&#176;F</td>
+        <td class="data">54.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.843 inHg (-0.054)</td>
+        <td class="data">29.844 inHg (-0.051)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">6 mph NNW (338&#176;)</td>
+        <td class="data">7 mph NNE (22&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">95.8&#176;F</td>
+        <td class="data">94.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">31%</td>
+        <td class="data">32%</td>
       </tr>
     </tbody>
   </table>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">94%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">2 days, 2 hours, 42 minutes</td>
+      <td class="data">2 days, 2 hours, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">2 days, 2 hours, 42 minutes</td>
+      <td class="data">2 days, 2 hours, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
