--- a/statistics.html
+++ b/statistics.html
@@ -36,7 +36,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/03/2020 05:39:00 PM</p>
+    <p class="lastupdate">09/03/2020 05:44:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -275,9 +275,9 @@
             &#176;
           </td>
           <td class="data new_row">
-            12<br/>
-            355<br/>
-            <span class="timestamp">01:59:07 AM</span>
+            13<br/>
+            14<br/>
+            <span class="timestamp">05:43:19 PM</span>
           </td>
           <td class="data new_row">
             23<br/>
@@ -339,7 +339,7 @@
           </td>
           <td class="data new_row">
             1<br/>
-            185
+            186
           </td>
           <td class="data new_row">
             0<br/>
