--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/03/2020 05:49:00 PM</p>
+    <p class="lastupdate">09/03/2020 05:54:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">93.0&#176;F</td>
+        <td class="data">92.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">93.0&#176;F</td>
+        <td class="data">92.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">93.0&#176;F</td>
+        <td class="data">92.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">53.0&#176;F</td>
+        <td class="data">53.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">26%</td>
+        <td class="data">27%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.853 inHg (-0.035)</td>
+        <td class="data">29.856 inHg (-0.030)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">9 mph NNE (22&#176;)</td>
+        <td class="data">7 mph NW (315&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">92.8&#176;F</td>
+        <td class="data">93.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">100%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">2 days, 3 hours, 2 minutes</td>
+      <td class="data">2 days, 3 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">2 days, 3 hours, 2 minutes</td>
+      <td class="data">2 days, 3 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
